Archive2/40/f6e9e697ad145d/output
main.cpp: In instantiation of 'struct serializer<with_pointer>':
main.cpp:72:29:   required from here
main.cpp:42:4: error: static assertion failed: Not serializable
    static_assert(is_serializable<T>::value, "Not serializable");
    ^
